[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval"
version = "0.1.0"
description = "Prompt evaluation harness for Claude API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
harness = "harness:main"

[tool.setuptools]
py-modules = ["harness"]
